--- a/Project1Portfolio/Views/Admin/Index.cshtml
+++ b/Project1Portfolio/Views/Admin/Index.cshtml
@@ -19,10 +19,7 @@
             @Html.Action("PartialNavBar","Admin")
 
 
-            <h2 class="mb-4">Kategori Listesi</h2>
-
-
-            Buraya kategoriler gelecek
+            @RenderBody()
 
         </div>
     </div>
