--- a/Project1Portfolio/Views/Default/Index.cshtml
+++ b/Project1Portfolio/Views/Default/Index.cshtml
@@ -28,214 +28,13 @@
     @Html.Action("PartialAbout","Default")
     <!-- About End -->
     <!-- Education Start -->
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-3">
-                    <div class="education-header bg-dark h-100 pt-6 pe-6 pb-6">
-                        <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                            <p class="text-white sub-title">Education</p>
-                            <h1 class="display-6 text-white mb-0">My education qualification</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="education-content h-100 pt-6 ps-6 pb-6">
-                        <div class="row g-4">
-                            <div class="col-12">
-                                <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">National University</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">Diploma in Computer</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">Webster College</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">UI/UX Design</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="education-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">Oxford University</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">Java Development</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Action("PartialEducation","Default")
     <!-- Education End -->
     <!-- Experience Start -->
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-3">
-                    <div class="experience-header bg-dark h-100 pt-6 pe-6 pb-6">
-                        <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                            <p class="text-white sub-title">Experience</p>
-                            <h1 class="display-6 text-white mb-0">My real work experience</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="experience-content h-100 pt-6 ps-6 pb-6">
-                        <div class="row g-4">
-                            <div class="col-12">
-                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">Historian</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">Seinor UI/UX Desinger</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">Historian</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">UI/UX Designer</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="experience-item rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
-                                    <div class="d-flex align-items-center mb-3">
-                                        <p class="fs-5 mb-0 me-4">Historian</p>
-                                        <div>
-                                            <span class="fa fa-calendar me-1"></span> 2017 - 2019
-                                        </div>
-                                    </div>
-                                    <h4 class="mb-3">Junior Visual Designer</h4>
-                                    <p class="mb-0">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a quasi velit sint atque non saepe quaerat ducimus, nobis error cupiditate, nisi repudiandae dignissimos magnam? Dicta ab possimus tempora nobis.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Action("PartialExperience","Default")
     <!-- Exparience End -->
     <!-- Skills Start -->
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-3">
-                    <div class="skills-header h-100 bg-dark pt-6 pe-6 pb-6">
-                        <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                            <p class="text-white sub-title">Skills</p>
-                            <h1 class="display-6 text-white mb-0">My expertise skills</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="skills-content h-100 pt-6 ps-6 pb-6">
-                        <div class="row g-4">
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-wordpress fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">98</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">WordPress</p>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-figma fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">95</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">Figma</p>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.5s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-sketch fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">87</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">Sketch</p>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.7s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-elementor fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">75</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">Elementor</p>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-js-square fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">67</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">JavaScript</p>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
-                                <div class="skills-item text-center rounded p-4 h-100 wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="text-primary text-center mb-3"><span class="fab fa-html5 fa-3x"></span></div>
-                                    <div class="counter-counting d-flex justify-content-center">
-                                        <h4 class="display-6" data-toggle="counter-up">98</h4>
-                                        <h4 class="display-6">%</h4>
-                                    </div>
-                                    <p class="mb-0">HTML & CSS</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Action("PartialSkills","Default")
     <!-- Skills End -->
     <!-- Service Start -->
     <div class="container-fluid" id="pigraService">
@@ -775,22 +574,7 @@
     </div>
     <!-- Footer End -->
     <!-- Back to Top -->
-    <a href="#" class="btn btn-primary btn-lg-square back-to-top"><i class="fa fa-arrow-up"></i></a>
-
-
-    <!-- JavaScript Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/wow/wow.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/easing/easing.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/waypoints/waypoints.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/counterup/counterup.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/lightbox/js/lightbox.min.js"></script>
-    <script src="/Content/Pigra-1.0.0/lib/owlcarousel/owl.carousel.min.js"></script>
-
-
-    <!-- Template Javascript -->
-    <script src="/Content/Pigra-1.0.0/js/main.js"></script>
+    @Html.Action("PartialScript","Default")
 </body>
 
 </html>
