--- a/Project1Portfolio/Views/Default/Index.cshtml
+++ b/Project1Portfolio/Views/Default/Index.cshtml
@@ -205,124 +205,7 @@
     </div>
     <!-- Portfolio End -->
     <!-- Blog Start -->
-    <div class="container-fluid" id="pigraBlog">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-3">
-                    <div class="blog-header h-100 bg-dark pt-6 pe-6 pb-6">
-                        <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
-                            <p class="text-white sub-title">Blog</p>
-                            <h1 class="display-6 text-white mb-0">Recent Posts</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-9">
-                    <div class="blog-content h-100 pt-6 ps-6 pb-6">
-                        <div class="row g-4">
-                            <div class="col-xl-6">
-                                <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
-                                    <div class="row g-4">
-                                        <div class="col-4">
-                                            <div class="blog-item-img bg-dark h-100">
-                                                <a href="#">
-                                                    <img src="img/blog-1.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-8">
-                                            <div class="h-100">
-                                                <p class="text-body mb-3"><i class="fa fa-calendar-alt me-2"></i> November 12, 2024</p>
-                                                <a href="#" class="d-inline-block h4 mb-4">Secrets of the Mobile Application</a>
-                                                <div class="py-2 px-3 bg-light d-flex justify-content-between">
-                                                    <p class="mb-0 text-body">By <a href="#" class="h6">Bernard</a></p>
-                                                    <p class="mb-0 text-body">In <a href="#" class="h6">Design</a></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
-                                    <div class="row g-4">
-                                        <div class="col-4">
-                                            <div class="blog-item-img bg-dark h-100">
-                                                <a href="#">
-                                                    <img src="img/blog-2.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-8">
-                                            <div class="h-100">
-                                                <p class="text-body mb-3"><i class="fa fa-calendar-alt me-2"></i> November 18, 2024</p>
-                                                <a href="#" class="d-inline-block h4 mb-4">How to Create Quality Figma Design</a>
-                                                <div class="py-2 px-3 bg-light d-flex justify-content-between">
-                                                    <p class="mb-0 text-body">By <a href="#" class="h6">Walker</a></p>
-                                                    <p class="mb-0 text-body">In <a href="#" class="h6">Media</a></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="blog-item wow fadeInUp" data-wow-delay="0.5s">
-                                    <div class="row g-4">
-                                        <div class="col-4">
-                                            <div class="blog-item-img bg-dark h-100">
-                                                <a href="#">
-                                                    <img src="img/blog-3.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-8">
-                                            <div class="h-100">
-                                                <p class="text-body mb-3"><i class="fa fa-calendar-alt me-2"></i> November 23, 2025</p>
-                                                <a href="#" class="d-inline-block h4 mb-4">Tutorials for Learning Development</a>
-                                                <div class="py-2 px-3 bg-light d-flex justify-content-between">
-                                                    <p class="mb-0 text-body">By <a href="#" class="h6">Jacob</a></p>
-                                                    <p class="mb-0 text-body">In <a href="#" class="h6">Lifestyle</a></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="blog-item wow fadeInUp" data-wow-delay="0.7s">
-                                    <div class="row g-4">
-                                        <div class="col-4">
-                                            <div class="blog-item-img bg-dark h-100">
-                                                <a href="#">
-                                                    <img src="img/blog-4.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Image">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-8">
-                                            <div class="h-100">
-                                                <p class="text-body mb-3"><i class="fa fa-calendar-alt me-2"></i> November 26, 2025</p>
-                                                <a href="#" class="d-inline-block h4 mb-4">Tutorials for Learning Development</a>
-                                                <div class="py-2 px-3 bg-light d-flex justify-content-between">
-                                                    <p class="mb-0 text-body">By <a href="#" class="h6">Perkel</a></p>
-                                                    <p class="mb-0 text-body">In <a href="#" class="h6">Design</a></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 wow fadeInUp" data-wow-delay="0.9s">
-                                <div class="blog-btn d-flex justify-content-center">
-                                    <p class="mb-0 me-2">For More Works Visit</p>
-                                    <a href="#" class="btn d-inline-block p-0">Our Blog</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!-- Blog End -->
     <!-- Testimonial Start -->
     <div class="container-fluid">
@@ -543,35 +426,7 @@
     </div>
     <!-- Contact End -->
     <!-- Footer Start -->
-    <div class="container-fluid footer bg-dark border-bottom-0">
-        <div class="container wow fadeIn" data-wow-delay="0.1s">
-            <div class="row g-0">
-                <div class="col-12">
-                    <div class="footer-content h-100 pt-6 ps-6 pb-6">
-                        <div class="row g-4 align-items-center">
-                            <div class="col-12 text-center">
-                                <div class="d-flex justify-content-center">
-                                    <a class="btn btn-light btn-md-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a class="btn btn-light btn-md-square me-3" href=""><i class="fab fa-twitter"></i></a>
-                                    <a class="btn btn-light btn-md-square me-3" href=""><i class="fab fa-instagram"></i></a>
-                                    <a class="btn btn-light btn-md-square me-0" href=""><i class="fab fa-linkedin-in"></i></a>
-                                </div>
-                            </div>
-                            <div class="col-12 text-center">
-                                <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-body me-2"></i>Your Site Name</a>, All right reserved.</span>
-                            </div>
-                            <div class="col-12 text-center text-body">
-                                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                                Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom text-white" href="https://themewagon.com">ThemeWagon</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Action("PartialSocialMedia","Default")
     <!-- Footer End -->
     <!-- Back to Top -->
     @Html.Action("PartialScript","Default")
