--- a/Project1Portfolio/Views/Default/PartialAbout.cshtml
+++ b/Project1Portfolio/Views/Default/PartialAbout.cshtml
@@ -5,7 +5,7 @@
                 <div class="about-header bg-dark h-100 pt-6 pe-6 pb-6">
                     <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                         <p class="text-white sub-title">Hakkımda</p>
-                        <h1 class="display-6 text-white mb-0">Yazılım Mühendisi</h1>
+                        <h1 class="display-6 text-white mb-0">Bilgisayar Mühendisi</h1>
                     </div>
                 </div>
             </div>
