--- a/Project1Portfolio/Views/Default/PartialHeader.cshtml
+++ b/Project1Portfolio/Views/Default/PartialHeader.cshtml
@@ -8,7 +8,7 @@
                     </a>
                     <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
                         <p class="text-white sub-title">👋 Hello I'm Yakup Akyürek</p>
-                        <h1 class="display-6 text-white mb-0">Yazılım Mühendisi</h1>
+                        <h1 class="display-6 text-white mb-0">Bilgisayar Mühendisi</h1>
                     </div>
                 </div>
             </div>
