--- a/Project1Portfolio/Views/Contact/PartialContactAdress.cshtml
+++ b/Project1Portfolio/Views/Contact/PartialContactAdress.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="col-xl-5 wow fadeInUp" data-wow-delay="0.1s">
-    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">CV'mi indirin</a>.</p>
+    <p class="mb-4">İletişime geçmek için formu doldurabilir yahut Mail veya Numaramdan bana ulaşabilirsiniz. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">CV'mi indirin</a>.</p>
     <div class="d-flex mb-4">
         <div class="btn-xl-square bg-primary text-white me-3">
             <i class="fas fa-map-marker-alt"></i>
