--- a/Project1Portfolio/Views/Default/PartialNavBar.cshtml
+++ b/Project1Portfolio/Views/Default/PartialNavBar.cshtml
@@ -1,12 +1,35 @@
-﻿<div class="container-fluid nav-section border-0">
+﻿﻿<div class="container-fluid nav-section border-0">
     <nav class="navbar navbar-light">
         <div class="navbar-nav flex-column">
-            <a href="#pigraHome" class="nav-item nav-link active"><span class="fa fa-home"></span> Anasayfa</a>
-            <a href="#pigraAbout" class="nav-item nav-link"><span class="far fa-address-card"></span> Hakkımda</a>
-            <a href="#pigraEducation" class="nav-item nav-link"><span class="fas fa-scholl"></span> Eğitim Hayatım</a>
-            <a href="#pigraService" class="nav-item nav-link"><span class="fab fa-servicestack"></span> Hizmetlerim</a>
-            <a href="#pigraBlog" class="nav-item nav-link"><span class="fa fa-blog"></span> Yeteneklerim</a>
-            <a href="#pigraContact" class="nav-item nav-link"><span class="fas fa-address-book"></span> Bana Yazın</a>
+            <a href="#pigraHome" class="nav-item nav-link active">
+                <span class="fa fa-home"></span> Anasayfa
+            </a>
+            <a href="#pigraAbout" class="nav-item nav-link">
+                <span class="far fa-address-card"></span> Hakkımda
+            </a>
+            <a href="#pigraEducation" class="nav-item nav-link">
+                <span class="fas fa-user-graduate"></span> Eğitim
+            </a>
+            <a href="#pigraExperience" class="nav-item nav-link">
+                <span class="fas fa-briefcase"></span> Deneyim
+            </a>
+           
+            <a href="#pigraSkills" class="nav-item nav-link">
+                <span class="fas fa-tools"></span> Beceri
+            </a>
+            <a href="#pigraService" class="nav-item nav-link">
+                <span class="fab fa-servicestack"></span> Hizmetler
+            </a>
+            <a href="#pigraProjects" class="nav-item nav-link">
+                <span class="fas fa-project-diagram"></span> Çalışmalarım
+            </a>
+         
+            <a href="#pigraReferences" class="nav-item nav-link">
+                <span class="fas fa-star"></span> Referans
+            </a>
+            <a href="#pigraContact" class="nav-item nav-link">
+                <span class="fas fa-address-book"></span> İletişim
+            </a>
 
         </div>
     </nav>
