--- a/Project1Portfolio/Views/Default/PartialSkills.cshtml
+++ b/Project1Portfolio/Views/Default/PartialSkills.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Project1Portfolio.Models.Skill>
 
 
-<div class="container-fluid">
+<div class="container-fluid" id="pigraSkills">
     <div class="container">
         <div class="row g-0">
             <div class="col-lg-3">
