--- a/Project1Portfolio/Views/Default/PartialSocialMedia.cshtml
+++ b/Project1Portfolio/Views/Default/PartialSocialMedia.cshtml
@@ -9,7 +9,7 @@
                             <div class="d-flex justify-content-center">
                                 @foreach (var item in Model)
                                 {
-                                    <a class="btn btn-light btn-md-square me-3" href=""><i class="@item.Icon"></i></a>
+                                    <a class="btn btn-light btn-md-square me-3" href="https://www.linkedin.com/in/yakup-aky%C3%BCrek-90042a1a4/                                                                                                                                                                                                 "><i class="@item.Icon"></i></a>
 
 
                                 }
