PROJECT FİNİSH

--- a/Project1Portfolio/Views/Admin/PartialNavBar.cshtml
+++ b/Project1Portfolio/Views/Admin/PartialNavBar.cshtml
@@ -15,13 +15,13 @@
                     <a class="nav-link" href="#">Siteye Git</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cv'mi İndir</a>
+                    <a class="nav-link" href="~/Content/CV/COURSE.pdf">Cv'mi İndir</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ayarlar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Gelen Mesajlar</a>
+                    <a class="nav-link" href="/Message/Inbox/">Gelen Mesajlar</a>
                 </li>
             </ul>
         </div>
