--- a/Project1Portfolio/Views/Default/PartialAbout.cshtml
+++ b/Project1Portfolio/Views/Default/PartialAbout.cshtml
@@ -29,7 +29,7 @@
                                 @ViewBag.description
                             </p>
                            
-                            <a href="#" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>CV'mi indir</a>
+                            <a href="~/Content/CV/COURSE.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>CV'mi indir</a>
                         </div>
                     </div>
                 </div>
