--- a/Project1Portfolio/Views/Statistics/Index.cshtml
+++ b/Project1Portfolio/Views/Statistics/Index.cshtml
@@ -12,6 +12,6 @@
 <div class="alert alert-success">yetenek sayısı:<b>@ViewBag.skillCount</b></div>
 <div class="alert alert-primary">yeteneklerin toplam puanı:<b>@ViewBag.totalSkillValue</b></div>
 <div class="alert alert-secondary">yeteneklerin ortalama puanı:<b>@ViewBag.averageSkillValue</b></div>
-<div class="alert alert-secondary" style="background-color:lightpink">mevcut email adresi:<b>@ViewBag.getEmailFromProfile</b></div>
-<div class="alert alert-secondary" style="background-color:orangered">son eklenen kategori:<b>@ViewBag.getLastCategoryName</b></div>
+<div class="alert alert-danger" style="background-color:bisque">mevcut email adresi:<b>@ViewBag.getEmailFromProfile</b></div>
+<div class="alert alert-primary" style="background-color:burlywood">son eklenen kategori:<b>@ViewBag.getLastCategoryName</b></div>
 
