--- a/Project1Portfolio/Views/Admin/PartialSideBar.cshtml
+++ b/Project1Portfolio/Views/Admin/PartialSideBar.cshtml
@@ -1,28 +1,30 @@
 ﻿<nav id="sidebar">
     <div class="p-4 pt-5">
-        <a href="#" class="img logo rounded-circle mb-5" style="background-image: url(/Content/Sidebar-01/images/logo.jpg);"></a>
+        <a href="#" class="img logo rounded-circle mb-5" style="background-image: url(/Content/Pigra-1.0.0/img/IMG-20241013-WA0006.jpg);"></a>
         <ul class="list-unstyled components mb-5">
 
-            <li><a href="#">Hakkımda</a></li>
-            <li><a href="#">Kategoriler</a></li>
-            <li><a href="#">Eğitim Hayatım</a></li>
+            <li><a href="/About/Index/">Hakkımda</a></li>
+            <li><a href="/Category/CategoryList/">Kategoriler</a></li>
+            <li><a href="/Education/EducationList/">Eğitim Hayatım</a></li>
             <li><a href="/Experience/ExperienceList/">Deneyimlerim</a></li>
             <li><a href="/Message/Inbox/">Gelen Mesajlar</a></li>
-            <li><a href="#">Profilim</a></li>
-            <li><a href="#">Hizmetler</a></li>
+
+            <li><a href="/Service/ServiceList/">Hizmetler</a></li>
             <li><a href="/Skill/SkillList/">Yeteneklerim</a></li>
-            <li><a href="#">Referanslar</a></li>
-            <li><a href="#">Çalışmalarım</a></li>
+            <li><a href="/Portfolio/PortfolioList/">Çalışmalarım</a></li>
+            <li><a href="/Statistics/Index/">İstatistikler</a></li>
+            <li><a href="/Chart/GetSkills/">Chartlar</a></li>
+            <li><a href="/Profile/Index/">İletişim</a></li>
             <li><a href="#">Ayarlar</a></li>
             <li><a href="#">Çıkış Yap</a></li>
         </ul>
 
         <div class="footer">
             <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                
                 Copyright &copy;
                 <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                
             </p>
         </div>
 
