--- a/Project1Portfolio/Views/Category/CategoryList.cshtml
+++ b/Project1Portfolio/Views/Category/CategoryList.cshtml
@@ -4,27 +4,28 @@
 }
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
-<div class="container">
+
         
-    <br />
-    <table class="table table-bordered">
-        <tr>
-            <th>kategori Id</th>
-            <th>kategori adı</th>
-            <th>kategori durumu</th>
-            <th>detaylar</th>
-        </tr>
-        <tr>
-            <td>1 </td>
-            <td>meyve sebze</td>
-            <td>aktif</td>
-            <td><button class="btn btn-info">detaylar</button> </td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>içecek</td>
-            <td>aktif</td>
-            <td><button class="btn btn-info">detaylar</button> </td>
-        </tr>
-    </table>
-</div>
+    <div class="container">
+        <br />
+        <table class="table table-bordered">
+            <tr>
+                <th>Kategori ID</th>
+                <th>Kategori Adı</th>
+                <th>Kategori Durum</th>
+                <th>Detaylar</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>İsim</td>
+                <td>Açık</td>
+                <td><button class="btn btn-primary">Detaylar</button></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Ad</td>
+                <td>Kapalı</td>
+                <td><button class="btn btn-danger">Detaylar</button></td>
+            </tr>
+        </table>
+    </div>
