--- a/Project1Portfolio/Views/Service/ServiceList.cshtml
+++ b/Project1Portfolio/Views/Service/ServiceList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Admin/Index.cshtml";
 }
 
-<h2>Servislerim Listesi ve İşlemleri</h2>
+<h2>Hizmetlerim </h2>
 
 <table class="table table-bordered">
     <tr>
